--- a/net-core/Ical.Net/Ical.Net.nuspec
+++ b/net-core/Ical.Net/Ical.Net.nuspec
@@ -18,13 +18,26 @@
         </dependencies>
     </metadata>
     <files>
-        <!-- netstandard 1.6 -->
-        <file src="Ical.Net\bin\Release\netstandard1.6\Ical.Net.Collections.dll" target="lib\netstandard1.6\Ical.Net.Collections.dll" />
-        <file src="Ical.Net\bin\Release\netstandard1.6\Ical.Net.Collections.pdb" target="lib\netstandard1.6\Ical.Net.Collections.pdb" />
-        <file src="Ical.Net\bin\Release\netstandard1.6\Ical.Net.dll" target="lib\netstandard1.6\Ical.Net.dll" />
-        <file src="Ical.Net\bin\Release\netstandard1.6\Ical.Net.pdb" target="lib\netstandard1.6\Ical.Net.pdb" />
-        <file src="Ical.Net\bin\Release\netstandard1.6\antlr.runtime.dll" target="lib\netstandard1.6\antlr.runtime.dll" />
-        <file src="Ical.Net\bin\Release\netstandard1.6\antlr.runtime.pdb" target="lib\netstandard1.6\antlr.runtime.pdb" />
-        <file src="Ical.Net\bin\Release\netstandard1.6\Ical.Net.deps.json" target="lib\netstandard1.6\Ical.Net.deps.json" />
+        <!-- netstandard 1.3 -->
+        <file src="Ical.Net\bin\Release\netstandard1.3\Ical.Net.Collections.dll" target="lib\netstandard1.3\Ical.Net.Collections.dll" />
+        <file src="Ical.Net\bin\Release\netstandard1.3\Ical.Net.Collections.pdb" target="lib\netstandard1.3\Ical.Net.Collections.pdb" />
+        <file src="Ical.Net\bin\Release\netstandard1.3\Ical.Net.Collections.xml" target="lib\netstandard1.3\Ical.Net.Collections.xml" />
+        <file src="Ical.Net\bin\Release\netstandard1.3\Ical.Net.dll" target="lib\netstandard1.3\Ical.Net.dll" />
+        <file src="Ical.Net\bin\Release\netstandard1.3\Ical.Net.pdb" target="lib\netstandard1.3\Ical.Net.pdb" />
+        <file src="Ical.Net\bin\Release\netstandard1.3\Ical.Net.xml" target="lib\netstandard1.3\Ical.Net.xml" />
+        <file src="Ical.Net\bin\Release\netstandard1.3\antlr.runtime.dll" target="lib\netstandard1.3\antlr.runtime.dll" />
+        <file src="Ical.Net\bin\Release\netstandard1.3\antlr.runtime.pdb" target="lib\netstandard1.3\antlr.runtime.pdb" />
+        <file src="Ical.Net\bin\Release\netstandard1.3\antlr.runtime.xml" target="lib\netstandard1.3\antlr.runtime.xml" />
+        <file src="Ical.Net\bin\Release\netstandard1.3\Ical.Net.deps.json" target="lib\netstandard1.3\Ical.Net.deps.json" />
+        <!-- net46 -->
+        <file src="Ical.Net\bin\Release\net46\Ical.Net.Collections.dll" target="lib\net46\Ical.Net.Collections.dll" />
+        <file src="Ical.Net\bin\Release\net46\Ical.Net.Collections.pdb" target="lib\net46\Ical.Net.Collections.pdb" />
+        <file src="Ical.Net\bin\Release\net46\Ical.Net.Collections.xml" target="lib\net46\Ical.Net.Collections.xml" />
+        <file src="Ical.Net\bin\Release\net46\Ical.Net.dll" target="lib\net46\Ical.Net.dll" />
+        <file src="Ical.Net\bin\Release\net46\Ical.Net.pdb" target="lib\net46\Ical.Net.pdb" />
+        <file src="Ical.Net\bin\Release\net46\Ical.Net.xml" target="lib\net46\Ical.Net.xml" />
+        <file src="Ical.Net\bin\Release\net46\antlr.runtime.dll" target="lib\net46\antlr.runtime.dll" />
+        <file src="Ical.Net\bin\Release\net46\antlr.runtime.pdb" target="lib\net46\antlr.runtime.pdb" />
+        <file src="Ical.Net\bin\Release\net46\antlr.runtime.xml" target="lib\net46\antlr.runtime.xml" />
     </files>
 </package>
