--- a/v2/ical.NET.UnitTests/Ical.Net.UnitTests.csproj
+++ b/v2/ical.NET.UnitTests/Ical.Net.UnitTests.csproj
@@ -96,6 +96,7 @@
     <Compile Include="ListExtensions.cs" />
     <Compile Include="ProgramTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VTimeZoneTest.cs" />
     <None Include="app.config" />
     <Compile Include="RecurrenceTests.cs" />
     <Compile Include="SerializationTests.cs" />
