--- a/v2/ical.NET/Ical.Net.csproj
+++ b/v2/ical.NET/Ical.Net.csproj
@@ -61,7 +61,6 @@
   <ItemGroup>
     <Reference Include="NodaTime, Version=1.3.0.0, Culture=neutral, PublicKeyToken=4226afe0d9b296d1, processorArchitecture=MSIL">
       <HintPath>..\packages\NodaTime.1.3.1\lib\net35-Client\NodaTime.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -74,6 +73,7 @@
     <Compile Include="Components\FreeBusy.cs" />
     <Compile Include="Components\VTimeZone.cs" />
     <Compile Include="Components\Journal.cs" />
+    <Compile Include="Components\VTimeZoneInfo.cs" />
     <Compile Include="DataTypes\Attachment.cs" />
     <Compile Include="Components\CalendarComponent.cs">
       <SubType>Code</SubType>
@@ -102,6 +102,8 @@
     <Compile Include="Evaluation\Evaluator.cs" />
     <Compile Include="Evaluation\PeriodListEvaluator.cs" />
     <Compile Include="Evaluation\RecurringEvaluator.cs" />
+    <Compile Include="Evaluation\TimeZoneEvaluator.cs" />
+    <Compile Include="Evaluation\TimeZoneInfoEvaluator.cs" />
     <Compile Include="Evaluation\TodoEvaluator.cs" />
     <Compile Include="Exceptions\EvaluationEngineException.cs" />
     <Compile Include="ExtensionMethods\CalendarObjectExtensions.cs" />
@@ -110,6 +112,7 @@
     <Compile Include="General\Proxies\ParameterCollectionProxy.cs" />
     <Compile Include="General\ServiceProvider.cs" />
     <Compile Include="General\Proxies\UniqueComponentListProxy.cs" />
+    <Compile Include="Interfaces\Components\ITimeZoneInfo.cs" />
     <Compile Include="Interfaces\DataTypes\IFreeBusyEntry.cs" />
     <Compile Include="Interfaces\Evaluation\IGetFreeBusy.cs" />
     <Compile Include="Interfaces\Evaluation\IGetOccurrences.cs" />
@@ -218,7 +221,6 @@
     <Compile Include="Interfaces\General\IMergeable.cs" />
     <Compile Include="Interfaces\ICalendar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <None Include="packages.config" />
     <Compile Include="Serialization\DataTypeMapper.cs" />
     <Compile Include="Serialization\iCalendar\Serializers\DataMapSerializer.cs" />
     <Compile Include="Serialization\iCalendar\Serializers\DataTypes\DateTimeSerializer.cs" />
@@ -267,7 +269,9 @@
       <Name>Ical.Net.Collections</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
