--- a/net-core/Ical.Net/Ical.Net/Ical.Net.csproj
+++ b/net-core/Ical.Net/Ical.Net/Ical.Net.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.3;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard1.3</TargetFrameworks>
     <Version>4.0.1</Version>
     <Authors>Rian Stockbower, Douglas Day</Authors>
     <Company />
