--- a/net-core/Ical.Net/Ical.Net.csproj
+++ b/net-core/Ical.Net/Ical.Net.csproj
@@ -1,23 +1,31 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.3;net46</TargetFrameworks>
-    <Version>4.1.8</Version>
-    <Authors>Rian Stockbower, Douglas Day</Authors>
+    <TargetFrameworks>netstandard2.0;net472</TargetFrameworks>
+    <Version>5.0.0</Version>
+    <Authors>Rian Stockbower, Douglas Day &amp; Contributors</Authors>
     <Company />
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\IcalNetStrongnameKey.snk</AssemblyOriginatorKeyFile>
-    <DebugSymbols Condition=" '$(TargetFramework)' == 'net46' ">true</DebugSymbols>
-    <DebugType Condition=" '$(TargetFramework)' == 'net46' ">full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <PackageId>Fusonic.Ical.Net</PackageId>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseFile>license.md</PackageLicenseFile>
+    <Description>An iCalendar (RFC 5545) control library. See https://github.com/rianjs/ical.net for details.</Description>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DocumentationFile>bin\Release\Ical.Net.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="NodaTime" Version="2.0.2" />
-    <PackageReference Include="System.Reflection.TypeExtensions" Version="4.1.0" />
-    <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\license.md">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 </Project>
