--- a/Ical.Net/Ical.Net.nuspec
+++ b/Ical.Net/Ical.Net.nuspec
@@ -11,8 +11,9 @@
     <projectUrl>https://github.com/laget-se/ical.net</projectUrl>
     <licenseUrl>https://github.com/laget-se/ical.net/blob/master/license.md</licenseUrl>
     <releaseNotes>https://github.com/laget-se/ical.net/blob/master/release-notes.md</releaseNotes>
-    <iconUrl>https://github.com/laget-se/ical.net/raw/master/nuget_logo_150px.png</iconUrl>
     <tags>iCal Calendar icalendar ics outlook events rfc-5545 rfc-2445 dday</tags>
+    <icon>assets\icon.png</icon>
+    <readme>assets\readme.md</readme>
     <dependencies>
       <group targetFramework="net8.0">
         <dependency id="NodaTime" version="3.1.10" />
@@ -42,7 +43,7 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="..\README.md" target="assets\" />
+    <file src="..\readme.md" target="assets\" />
     <file src="..\assets\logo.png" target="assets\" />
     <file src=".\bin\Release\net8.0\*" target="lib\net8.0\" />
     <file src=".\bin\Release\net6.0\*" target="lib\net6.0\" />
