--- a/Ical.Net/Ical.Net.nuspec
+++ b/Ical.Net/Ical.Net.nuspec
@@ -12,7 +12,7 @@
     <licenseUrl>https://github.com/laget-se/ical.net/blob/master/license.md</licenseUrl>
     <releaseNotes>https://github.com/laget-se/ical.net/blob/master/release-notes.md</releaseNotes>
     <tags>iCal Calendar icalendar ics outlook events rfc-5545 rfc-2445 dday</tags>
-    <icon>assets\icon.png</icon>
+    <icon>assets\logo.png</icon>
     <readme>assets\readme.md</readme>
     <dependencies>
       <group targetFramework="net8.0">
