--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,4 +1,4 @@
-name: Code Coverage
+﻿name: Code Coverage
 # This job runs unit tests and generates a code coverage report.
 # The report is stored as artifact, and uploaded to Codecov.
 
@@ -49,12 +49,12 @@ jobs:
       run: dotnet test --no-build --configuration Release --verbosity normal /p:AltCover=true /p:AltCoverXmlReport="coverage.xml" /p:AltCoverStrongNameKey="../IcalNetStrongnameKey.snk" /p:AltCoverAssemblyExcludeFilter="Ical.Net.Tests|NUnit3.TestAdapter|AltCover" /p:AltCoverAttributeFilter="ExcludeFromCodeCoverage" /p:AltCoverLineCover="false"
 
     - name: Store coverage report as artifact
-      uses: actions/upload-artifact@v6
+      uses: actions/upload-artifact@v5
       with:
         name: coverage-report
         path: ./Ical.Net.Tests/coverage.*.xml  # store all coverage reports
     - name: Upload coverage to Codecov  
-      uses: codecov/codecov-action@671740ac38dd9b0130fbe1cec585b89eea48d3de
+      uses: codecov/codecov-action@5a1091511ad55cbe89839c7260b706298ca349f7
       with:  
         # files: automatically finds all in ./Ical.Net.Tests/
         name: coverage
