--- a/Ical.Net.Tests/Ical.Net.Tests.csproj
+++ b/Ical.Net.Tests/Ical.Net.Tests.csproj
@@ -32,7 +32,7 @@
         <EmbeddedResource Include="Calendars\**\*" />
     </ItemGroup>
     <ItemGroup>
-      <EmbeddedResource Include="contrib\libical\icalrecur_test.out" />
+      <EmbeddedResource Include="contrib\libical\icalrecur_test.txt" />
     </ItemGroup>
     <ItemGroup>
         <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
